Classic browser bugs that are ~15 years old -- letter-spacing adds spacing AFTER letters rather than BETWEEN, which leads to having an extra space at the END of a string

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -213,9 +213,6 @@ pre {
   -ms-user-select: none;
   user-select: none;
 }
-.spaced {
-  letter-spacing: 1ch;
-}
 .link {
   /* Something else here to distinguish */
 }
